--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <nav class="menu-fixed">
           <ul>
             <li><a href="">Inicio</a></li>
-            <li><a href="">Registrarse</a></li>
+            <li><a href="https://quanticdemon.github.io/gfatyfayts/">Registrarse</a></li>
             <li><a href="">Blog</a></li>
             <li><a href="">Contacto</a></li>
           </ul>
